tests/transpiler/x/c/cast_struct.error
compile failed: exit status 1: /tmp/ctranspile1959270477/cast_struct.mochi.c: In function ‘main’:
/tmp/ctranspile1959270477/cast_struct.mochi.c:10:17: error: invalid initializer
   10 |     Todo todo = 0;
      |                 ^
/tmp/ctranspile1959270477/cast_struct.mochi.c:11:14: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘const char *’ [-Wformat=]
   11 |     printf("%d\n", todo.title);
      |             ~^     ~~~~~~~~~~
      |              |         |
      |              int       const char *
      |             %s

