tests/transpiler/x/c/cast_struct.c
// Generated by Mochi 0.10.32 on 2025-07-20 15:06 +0700
#include <stdio.h>
#include <string.h>

typedef struct {
    const char* title;
} Todo;

int main(void) {
    Todo todo = 0;
    printf("%d\n", todo.title);
    return 0;
}
